Water trail for fish added, Code clean up, CARDINAL_NEIGHBORS simplified